creación de rutas para USUARIOS, implementación del método index(). Probado en la documentación
